fix: Add access settings for /api/v1/admin/** path